Alpha 1.2:
	+ Brand new inventory screen that is hopefully much more ergonomic than the previous screen (crafting screen overhaul coming soon)
	# Fixed a number of ui and item bugs
	* Improved input controls to allow for wasd movement and mouse interaction
	* Made saved world list sort by modification time, so recently played worlds appear highest


Alpha 1.1:
	+ Brand new terrain system consisting of islands (well, only one island right now)
	+ Save system implemented
	


--- below: Pre-Alpha versioning ---

1.5 changes:
	
	v1:
		+ Added an update checker
		* Fixed a bunch of bugs
		+ Added pig sprites
	v2:
		* Major Tilesystem overhaul, though you won't notice unless you look at the code. It makes it easier to have multiple variations of a tile.
		+ Added animation for being in water
	v3:
		* Fixed all the bugs in v2.
		* Made apple and log sprites much smaller.
		* Gave some tiles a "3D" effect, where you can go in front and behind them, partially.
	v4:
		* Changed level generation drastically
	v5:
		+ Added/fixed/finalized inventory screen
		- Removed crafting screen temporarily
	v6:
		+ Added crafting screen
		+ Added recipes for all tool variants
		* Forced player to view instructions
		* Fixed ores to actually appear in the map (soon to be obsolete in 1.6/1.7)
		* Removed excessive stamina drain from tools
		* Improved a number of tile and item sprites
	v7:
		* Fixed a whole bunch of bugs in a whole bunch of areas
		* Updated interaction bounds
		- Decreased stamina
		- Decreased hurt cooldown
		* Made all prompt menus screens instead of popups
		- Decreased chat message display time
		+ Made Chat screen scroll to display more messages
		* Made items in your inventory but not hotbar stay out of your hotbar if you 
pickup another item of the same type
		+ Added command to clear chat