@@ -2,6 +2,7 @@ package miniventure.game.screen;
 
 import java.util.HashMap;
 
+import miniventure.game.client.InputHandler.Control;
 import miniventure.game.network.GameProtocol.LevelChange;
 import miniventure.game.network.GameProtocol.MapRequest;
 import miniventure.game.client.ClientCore;
@@ -52,7 +53,7 @@ public class MapScreen extends MenuScreen {
 	
 	@Override
 	public void act(float delta) {
-		if(Gdx.input.isKeyPressed(Keys.ESCAPE))
+		if(ClientCore.input.pressingControl(Control.CANCEL))
 			ClientCore.setScreen(null);
 		else
 			super.act(delta);
