@@ -1,3 +1,7 @@
+Alpha 2.1:
+	* Moved game data directory for Windows users to Documents/My Games/Miniventure
+	+ Completely remade crafting system
+
 Alpha 1.2:
 	+ Brand new inventory screen that is hopefully much more ergonomic than the previous screen (crafting screen overhaul coming soon)
 	# Fixed a number of ui and item bugs
